--- a/index.html
+++ b/index.html
@@ -34,6 +34,16 @@ goals and trajectories, a viewable and downloable resume, a showcase of various 
 
 <body>
 
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-36PX5GYEC8"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-36PX5GYEC8');
+</script>
+
   <!--
     - #MAIN
   -->
